# rust-os

./: Cargo.toml  README.md
.cargo/: config
.github/workflows/: check.yml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
