[package]
name = "rust-os"
version = "0.1.0"
authors = ["Arseniy Pendryak <a.pendryak@yandex.ru>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
