[package]
name = "rust-os"
version = "0.1.0"
authors = ["Arseniy Pendryak <a.pendryak@yandex.ru>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.0"
x86_64 = "0.12.3"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33 # (QemuExitCode::Success as u32 << 1) | 1