[package]
name = "rust-os"
version = "0.1.0"
authors = ["Arseniy Pendryak <a.pendryak@yandex.ru>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.11"
volatile = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.2"
x86_64 = "0.14.4"
uart_16550 = "0.2.10"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", # setup I/O port to exit QEMU from tests
    "-serial", "stdio", # redirect serial port output to stdout
    "-display", "none", # don't show QEMU window in tests
]
test-success-exit-code = 33 # (QemuExitCode::Success as u32 << 1) | 1
test-timeout = 10 # in seconds